<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">android-oauth-deezer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="mainactivity_login_bt">Login to Deezer</string>
    <string name="mainactivity_syncrequest_bt">Synchronous request</string>
    <string name="mainactivity_asyncrequest_bt">Asynchronous request</string>
    <string name="mainactivity_deezerasynctask_bt">Deezer AsyncTask request</string>

</resources>