<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/mainactivity_hello_tv" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/mainactivity_login_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_hello_tv"
        android:layout_centerHorizontal="true"
        android:onClick="btLogin"
        android:text="@string/mainactivity_login_bt" />
    
    <Button
        android:id="@+id/mainactivity_syncrequest_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_login_bt"
        android:layout_centerHorizontal="true"
        android:onClick="btSynchronousRequest"
        android:text="@string/mainactivity_syncrequest_bt" />
    
    <Button
        android:id="@+id/mainactivity_asyncrequest_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_syncrequest_bt"
        android:layout_centerHorizontal="true"
        android:onClick="btASynchronousRequest"
        android:text="@string/mainactivity_asyncrequest_bt" />
    
    <Button
        android:id="@+id/mainactivity_deezerasynctask_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_asyncrequest_bt"
        android:layout_centerHorizontal="true"
        android:onClick="btDeezerASyncTaskRequest"
        android:text="@string/mainactivity_deezerasynctask_bt" />

</RelativeLayout>